Bug 366503: Custom tags broken by junk keywords; r/sr=bienvenu